@@ -23,7 +23,7 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
 
-package Services::Services;
+package Init::Services;
 
 use Utils::Report;
 use Utils::File;
